--- a/AnimationNumberLabelDemo/Base.lproj/Main.storyboard
+++ b/AnimationNumberLabelDemo/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2659" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="AnimationNumberLabelDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,8 +20,57 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="0" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ixt-rG-wRf">
+                                <rect key="frame" x="37.5" y="52" width="300" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="BPg-L8-ddt"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="0" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MH2-uM-5hp">
+                                <rect key="frame" x="37" y="114" width="300" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="yaM-ag-03e"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zv5-w6-Tn2">
+                                <rect key="frame" x="156" y="291.5" width="62" height="30"/>
+                                <state key="normal" title="开始动画"/>
+                                <connections>
+                                    <action selector="startAnimationAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="p3y-zb-nkk"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FVF-1O-hFq">
+                                <rect key="frame" x="37" y="176" width="300" height="51.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="43"/>
+                                <color key="textColor" red="1" green="0.26348232449999998" blue="0.14272785630000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="MH2-uM-5hp" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9hq-Hn-28c"/>
+                            <constraint firstItem="ixt-rG-wRf" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="32" id="CaI-Zd-MuU"/>
+                            <constraint firstItem="FVF-1O-hFq" firstAttribute="trailing" secondItem="MH2-uM-5hp" secondAttribute="trailing" id="EUc-J1-LyU"/>
+                            <constraint firstItem="FVF-1O-hFq" firstAttribute="leading" secondItem="MH2-uM-5hp" secondAttribute="leading" id="JTC-c3-TaE"/>
+                            <constraint firstItem="zv5-w6-Tn2" firstAttribute="top" secondItem="FVF-1O-hFq" secondAttribute="bottom" constant="64" id="StD-rA-KxY"/>
+                            <constraint firstItem="zv5-w6-Tn2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fiJ-ef-OPC"/>
+                            <constraint firstItem="FVF-1O-hFq" firstAttribute="top" secondItem="MH2-uM-5hp" secondAttribute="bottom" constant="32" id="qGv-sD-6ye"/>
+                            <constraint firstItem="ixt-rG-wRf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qaH-0i-3Lu"/>
+                            <constraint firstItem="MH2-uM-5hp" firstAttribute="top" secondItem="ixt-rG-wRf" secondAttribute="bottom" constant="32" id="vQv-ff-rQ9"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="animationLabel" destination="FVF-1O-hFq" id="pM5-n0-gqB"/>
+                        <outlet property="endNum" destination="MH2-uM-5hp" id="LSG-M8-LPe"/>
+                        <outlet property="startNum" destination="ixt-rG-wRf" id="ppa-dT-bH9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
